Delete button added

--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -36,6 +36,10 @@
   padding: 0.5rem;
   border-radius: 12px;
 }
+.btn {
+  color: whitesmoke;
+  background-color: rgb(98, 39, 18);
+}
 
 @media (min-width: 580px) {
   .expense-item__description {
